# shopping_list

./: .gitignore  pyproject.toml
data/: recipes.yaml
src/shopping_list/: cli.py  models.py  recipes.py
src/shopping_list.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_smoke.py
