[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shopping-list"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pyyaml"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
shopping-list = "shopping_list.cli:main"
